[package]
name = "spaced_learner"
version = "0.1.0"
authors = ["Sandeep Datta <datta.sandeep@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["termion-backend"]
